--- a/eventos.html
+++ b/eventos.html
@@ -6,7 +6,6 @@
   <title>Próximos Eventos - ENHYPEN</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* ==== ESTILOS DE EVENTOS ==== */
     .eventos {
       text-align: center;
       padding: 50px 20px;
@@ -75,7 +74,6 @@
 </head>
 <body>
 
-  <!-- ================= HEADER ================= -->
   <header>
     <div class="logo">
       <img src="https://i.ibb.co/shT1MxB/Lighistick-enha.png" alt="Lightstick ENHYPEN">
@@ -88,13 +86,13 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="galeria.html">Galeria</a></li>
         <li><a href="integrantes.html">Integrantes</a></li>
-        <li><a href="eventos.html" class="ativo">Eventos</a></li>
         <li><a href="contato.html">Contato</a></li>
+        <li><a href="sites.html">Sites</a></li>
+        <li><a href="eventos.html">Eventos</a></li>
       </ul>
     </nav>
-  </header>
+  </header>  
 
-  <!-- ================= EVENTOS ================= -->
   <section class="eventos">
     <h2>Próximos Eventos e Shows do ENHYPEN</h2>
 
@@ -133,7 +131,6 @@
     </div>
   </section>
 
-  <!-- ================= FOOTER ================= -->
   <footer>
     <p>&copy; 2025 ENGENE STATION. Todos os direitos reservados.</p>
   </footer>
