--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
         <li><a href="integrantes.html">Integrantes</a></li>
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
-        <li><a href="eventos.html">Sites</a></li>
+        <li><a href="eventos.html">Eventoss</a></li>
     </ul>
     </nav>
     </header>
@@ -42,4 +42,5 @@
 
  <footer class="footer container flex flex-center">
         <p class="text text-small text-muted">&copy; 2025 ENGENE STATION. Todos os direitos reservados.</p>
+
     </footer>
