--- a/galeria.html
+++ b/galeria.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <!-- ================= HEADER ================= -->
   <header>
     <div class="logo">
       <img src="https://i.ibb.co/shT1MxB/Lighistick-enha.png" alt="Lightstick ENHYPEN">
@@ -24,12 +23,11 @@
         <li><a href="integrantes.html">Integrantes</a></li>
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
-        <li><a href="eventos.html">Sites</a></li>
+        <li><a href="eventos.html">Eventos</a></li>
     </ul>
     </nav>
   </header>
 
-  <!-- ================= CARROSSEL ================= -->
   <section class="galeria-carrossel">
     <h2>Galeria ENHYPEN</h2>
 
@@ -72,3 +70,4 @@
     </footer>
 </body>
 </html>
+
