--- a/integrantes.html
+++ b/integrantes.html
@@ -22,7 +22,7 @@
         <li><a href="integrantes.html">Integrantes</a></li>
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
-        <li><a href="eventos.html">Sites</a></li>
+        <li><a href="eventos.html">Eventos</a></li>
     </ul>
     </nav>
 </header>
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
