--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
         <li><a href="integrantes.html">Integrantes</a></li>
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
-        <li><a href="eventos.html">Sites</a></li>
+        <li><a href="eventos.html">Eventos</a></li>
     </ul>
     </nav>
 </header>
@@ -54,3 +54,4 @@
 
 </body>
 </html>
+
