--- a/contato.html
+++ b/contato.html
@@ -23,6 +23,7 @@
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventoss</a></li>
+         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
     </ul>
     </nav>
     </header>
@@ -42,4 +43,5 @@
         <p class="text text-small text-muted">&copy; 2025 ENGENE STATION. Todos os direitos reservados.</p>
 
     </footer>
+
 
