--- a/eventos.html
+++ b/eventos.html
@@ -89,6 +89,7 @@
         <li><a href="contato.html">Contato</a></li>
         <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventos</a></li>
+         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
       </ul>
     </nav>
   </header>  
@@ -137,3 +138,4 @@
 
 </body>
 </html>
+
