--- a/galeria.html
+++ b/galeria.html
@@ -24,6 +24,7 @@
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventos</a></li>
+         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
     </ul>
     </nav>
   </header>
@@ -70,4 +71,5 @@
     </footer>
 </body>
 </html>
+
 
