--- a/integrantes.html
+++ b/integrantes.html
@@ -23,6 +23,7 @@
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventos</a></li>
+         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
     </ul>
     </nav>
 </header>
@@ -88,4 +89,5 @@
 
 </body>
 </html>
+
 
