--- a/sites.html
+++ b/sites.html
@@ -24,6 +24,7 @@
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventos</a></li>
+         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
     </ul>
     </nav>
     </header>
@@ -61,4 +62,5 @@
  <footer class="footer container flex flex-center">
         <p class="text text-small text-muted">&copy; 2025 ENGENE STATION. Todos os direitos reservados.</p>
     </footer>
+
 
