--- a/sobre.html
+++ b/sobre.html
@@ -22,6 +22,7 @@
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventos</a></li>
+         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
     </ul>
     </nav>
 </header>
@@ -54,4 +55,5 @@
 
 </body>
 </html>
+
 
