--- a/integrantes.html
+++ b/integrantes.html
@@ -14,7 +14,7 @@
     <h1>ENGENE STATION</h1>
   </div>
   
-    <nav>
+   <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
@@ -23,7 +23,7 @@
         <li><a href="contato.html">Contato</a></li>
          <li><a href="sites.html">Sites</a></li>
         <li><a href="eventos.html">Eventos</a></li>
-         <li><a href="funcionalidades.html" class="ativo">Funcionalidade</a></li>
+        <li><a href="funcionalidades.html">Funcionalidade</a></li>
     </ul>
     </nav>
 </header>
@@ -36,49 +36,49 @@
     <div class="card">
       <img src="https://i.ibb.co/RpWyWX0R/enhypen-instagram-update.jpg"  alt="Niki">
       <h3>Niki</h3>
-      <p>Idade: 21 anos<br>Posição: Vocal, Rapper<br>Nacionalidade: Japonês</p>
+      <p>Idade: 19 anoss(09/12/2005)<br>Posição: Vocal, Rapper<br>Nacionalidade: Japonês</p>
     </div>
 
     <!-- Jungwon -->
     <div class="card">
       <img src="https://i.ibb.co/bhDkNcm/jungwon-weverse-update.jpg" alt="Jungwon">
       <h3>Jungwon</h3>
-      <p>Idade: 20 anos<br>Posição: Líder, Dancer<br>Nacionalidade: Coreano</p>
+      <p>Idade: 21 anoss(09/02/2004)<br>Posição: Líder, Dancer<br>Nacionalidade: Coreano</p>
     </div>
 
     <!-- Heeseung -->
     <div class="card">
       <img src="https://i.ibb.co/GQzFBgp3/Heeseung-SOUND-OF-PRADA-241024.jpg" alt="Heeseung">
       <h3>Heeseung</h3>
-      <p>Idade: 21 anos<br>Posição: Vocal, Dancer<br>Nacionalidade: Coreano</p>
+      <p>Idade: 23 anoss(15/10/2001)<br>Posição: Vocal, Dancer<br>Nacionalidade: Coreano</p>
     </div>
 
     <!-- Jay -->
     <div class="card">
      <img src="https://i.ibb.co/Nnb0bbFx/download-5.jpg" alt="Jay">
       <h3>Jay</h3>
-      <p>Idade: 21 anos<br>Posição: Rapper<br>Nacionalidade: Americano-Coreano</p>
+      <p>Idade: 23 anoss(20/04/2002)<br>Posição: Rapper<br>Nacionalidade: Americano-Coreano</p>
     </div>
 
     <!-- Sunghoon -->
     <div class="card">
      <img src="https://i.ibb.co/hxtPmZ8H/Prada.jpg"  alt="Sunghoon">
       <h3>Sunghoon</h3>
-      <p>Idade: 20 anos<br>Posição: Dancer, Vocal<br>Nacionalidade: Coreano</p>
+      <p>Idade: 22 anoss(08/12/2002)<br>Posição: Dancer, Vocal<br>Nacionalidade: Coreano</p>
     </div>
 
     <!-- Sunoo -->
     <div class="card">
      <img src="https://i.ibb.co/HTbWhCbS/download-6.jpg"  alt="Sunoo">
       <h3>Sunoo</h3>
-      <p>Idade: 20 anos<br>Posição: Vocal<br>Nacionalidade: Coreano</p>
+      <p>Idade: 22 anoss(24/06/2003)<br>Posição: Vocal<br>Nacionalidade: Coreano</p>
     </div>
 
     <!-- Jake -->
     <div class="card">
      <img src="https://i.ibb.co/wZ85Fm8N/jake-250629.jpg"  alt="Jake">
       <h3>Jake</h3>
-      <p>Idade: 20 anos<br>Posição: Rapper, Vocal<br>Nacionalidade: Australiano-Coreano</p>
+      <p>Idade: 22 anos(15/09/2002)<br>Posição: Rapper, Vocal<br>Nacionalidade: Australiano-Coreano</p>
     </div>
   </div>
 </section>
@@ -89,5 +89,3 @@
 
 </body>
 </html>
-
-
