--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -87,7 +87,7 @@
     <h2>Funcionalidades do Site</h2>
     <p>
       O <strong>ENGENE STATION</strong> foi criado para reunir em um só lugar todas as informações sobre o grupo 
-      <strong>ENHYPEN</strong>. Nosso objetivo é aproximar os fãs (ENGENEs) da banda, oferecendo conteúdos organizados e fáceis de acessar.
+      <strong>ENHYPEN</strong>. Nosso objetivo é aproximar os fãs (ENGENEs) do grupo, oferecendo conteúdos organizados e fáceis de acessar.
     </p>
 
     <footer class="footer">
