--- a/integrantes.html
+++ b/integrantes.html
@@ -36,14 +36,14 @@
     <div class="card">
       <img src="https://i.ibb.co/RpWyWX0R/enhypen-instagram-update.jpg"  alt="Niki">
       <h3>Niki</h3>
-      <p>Idade: 19 anos(09/12/2005)<br>Posição: Vocal, Rapper<br>Nacionalidade: Japonês</p>
+      <p>Idade: 19 anos(09/12/2005)<br>Posição: Vocal, Main-Dancer<br>Nacionalidade: Japonês</p>
     </div>
 
     <!-- Jungwon -->
     <div class="card">
       <img src="https://i.ibb.co/bhDkNcm/jungwon-weverse-update.jpg" alt="Jungwon">
       <h3>Jungwon</h3>
-      <p>Idade: 21 anos(09/02/2004)<br>Posição: Líder, Dancer<br>Nacionalidade: Coreano</p>
+      <p>Idade: 21 anos(09/02/2004)<br>Posição: Líder, Vocal, Main-Dancer<br>Nacionalidade: Coreano</p>
     </div>
 
     <!-- Heeseung -->
@@ -57,7 +57,7 @@
     <div class="card">
      <img src="https://i.ibb.co/Nnb0bbFx/download-5.jpg" alt="Jay">
       <h3>Jay</h3>
-      <p>Idade: 23 anos(20/04/2002)<br>Posição: Rapper<br>Nacionalidade: Americano-Coreano</p>
+      <p>Idade: 23 anos(20/04/2002)<br>Posição: Rapper, Vocal, Dancer<br>Nacionalidade: Americano-Coreano</p>
     </div>
 
     <!-- Sunghoon -->
@@ -71,14 +71,14 @@
     <div class="card">
      <img src="https://i.ibb.co/HTbWhCbS/download-6.jpg"  alt="Sunoo">
       <h3>Sunoo</h3>
-      <p>Idade: 22 anos(24/06/2003)<br>Posição: Vocal<br>Nacionalidade: Coreano</p>
+      <p>Idade: 22 anos(24/06/2003)<br>Posição: Vocal, Dancer<br>Nacionalidade: Coreano</p>
     </div>
 
     <!-- Jake -->
     <div class="card">
      <img src="https://i.ibb.co/wZ85Fm8N/jake-250629.jpg"  alt="Jake">
       <h3>Jake</h3>
-      <p>Idade: 22 anos(15/09/2002)<br>Posição: Rapper, Vocal<br>Nacionalidade: Australiano-Coreano</p>
+      <p>Idade: 22 anos(15/09/2002)<br>Posição: Vocal, Dancer<br>Nacionalidade: Australiano-Coreano</p>
     </div>
   </div>
 </section>
